[package]
name = "tokioagents"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
failure = "0.1.8"
serde = {version = "1.0.186", features =["derive"]}
tokio = { version = "1.32.0", features = ["full"] }
rand = "0.7.3" # TODO: migrate to rand 0.8.5
simple_logger = "4.2.0"
log = "0.4.20"
